# toy-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  go.mod  go.sum  main.cpp  main.go
assets/model/bunny/: shader.vert
assets/shader/: axis.vert
assets/shader/v0/: shader.vert
engine/: config.cpp  config.h  font.go  globals.cpp  globals.h  mainwindow.cpp  mainwindow.h  mesh.go  property_view.cpp  property_view.h  renderer.cpp  renderer.h  renderer_view.cpp  renderer_view.h  treelist_view.cpp  treelist_view.h  world.go
engine/axis/: axis.cpp  axis.h
engine/camera/: Camera.go  camera.cpp  camera.h
engine/config/: config.go  world.go
engine/defines/: defines.go
engine/fps/: fps.cpp  fps.h
engine/light/: Light.go  const.go  direction_light.cpp  direction_light.h  light.cpp  light.go  light.h  point_light.h
engine/loader/: obj.go  wavefront.go
engine/logger/: logger.go
engine/material/: material.cpp  material.go  material.h
engine/mesh/: axis.go  const.go  cube.go  gen.go  ground.go  ground.h  lines.go  mesh.cpp  mesh.go  mesh.h  point.go  wavefront.go
engine/mesh/ground/: ground.go
engine/model/: const.go  ground.go  mesh.go  model.cpp  model.go  model.h  model_ground.cpp  model_ground.h  model_point.cpp  model_point.h  point.go
engine/shader/: shader.cpp  shader.go  shader.h
engine/technique/: base_technique.go  lighting_technique.go  technique.cpp  technique.go  technique.h  technique_light.cpp  technique_light.h
engine/text/: text.go
engine/texture/: texture.cpp  texture.go  texture.h
engine/ui/: window.go  window_light.go  window_main.go  window_material.go  window_model.go  windows_status.go
engine/utils/: glutils.go  sysutil.go  utils.cpp  utils.h
engine/window/: uic_window.go  window.go  window.ui  window_main.go  window_material.go
pkg/engine/: mesh.go  world.go
pkg/engine/camera/: Camera.go
pkg/engine/loader/: obj.go
pkg/engine/mesh/: cube.go
pkg/engine/shader/: shader.go
resource/: cube.fs  cube.vs  world.xml  world.yaml
resource/cube/: cube.fs  cube.vert
resource/font/: font.frag  font.vert
resource/model/: icosphere.gob
resource/model/bunny/: bunny.xml  shader.frag  shader.vert
resource/model/ground/: ground.xml  shader.frag  shader.vert
resource/shader/: axis.frag  axis.vert  default.frag  default.vert  light.frag  light.vert  only_vertex_color.vert  onlycolor.vert
resource/shader/ground/: shader.frag  shader.vert
resource/shader/v0/: shader.frag  shader.vert
resource/shader/v1/: shader.vert
resource/shader/v2/: shader.frag  shader.vert
